# credit_worthiness_checker

./: README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: python-app.yml
deploy/: pyproject.toml  streamlit.py  streamlitt.py
deploy/backend/: Dockerfile  inference.py  requirements.txt  transform.py
deploy/backend/model/: MLmodel  conda.yaml  python_env.yaml
deploy/frontend/: Dockerfile  requirements.txt  streamlit.py  streamlit_app.py  streamlitt.py
notebook/: eda.ipynb  train.ipynb
notebooks/: eda.ipynb  train.ipynb
src/: __init__.py  data_preprocess.py  data_preprocessing.py  feature.py  plotting.py  predict.py  train.py
src/data_prep/: __init__.py  data_preprocess.py  dataprep.md  make_dataset.py  plotting.py
src/model_dev/: eval.py  feature.py  predict.py  train.py
src/pred_app/temp_service/: inference.py  streamlitt.py
