[tool.poetry]
name = "deploy"
version = "0.1.0"
description = ""
authors = ["Olumide Odetunde <odetundeolumide95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mlflow = "2.11.3"
cloudpickle = "3.0.0"
numpy = "1.26.4"
packaging = "23.2"
psutil = "5.9.8"
pyyaml = "6.0.1"
scikit-learn = "1.4.1.post1"
scipy = "1.12.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

